# coffee-compass

./: .gitignore  Cargo.toml  build.sh
.cargo/: config
src/: consts.rs  eight_segment.rs  main.rs  stepper.rs
