cargo-features = ["edition"]

[package]
name = "coffee-compass"
version = "0.1.0"
authors = ["David McGillicuddy <contact@djmcgill.co.uk>"]
edition = "2018"

[dependencies]
cortex-m = "~0.5.2"
embedded-hal = "~0.2"
panic-abort = "~0.2"
nb = {version = "~0.1", features = ["unstable"]}
libm = "0.1.2"


[dependencies.atsamd21-hal]
version = "~0.1"
git = "https://github.com/zklapow/atsamd21-rs"
branch = "sercom-usart"
features = ["samd21g18a", "rt"]
