cargo-features = ["edition"]

[package]
name = "coffee-compass"
version = "0.1.0"
authors = ["David McGillicuddy <contact@djmcgill.co.uk>"]
edition = "2018"

[dependencies]
embedded-hal = "~0.2"
nb = {version = "~0.1", features = ["unstable"]}
libm = "0.1.2"

[dependencies.arduino_mkrzero]
version = "0.1"
git = "https://github.com/djmcgill/atsamd21-rs"
features = ["rt", "panic_abort"]
